--- a/cunt.html
+++ b/cunt.html
@@ -26,8 +26,8 @@
 
   </nav>
     </div>
-    <div class="container pt-5 my-5" style="background-color: antiquewhite; width: 40rem;">
-        <ul>
+    <div class="card-body text-center pt-5 my-1">
+        <ul  style="background-color: bisque;" >
             <li class="pt-1"><h2>Phone No:- 7073357475</h2></li>
             <li class="pt-1"><h2>facebook:- Samir Khan Muwal</h2></li>
             <li class="pt-1"><h2>instagram:- mr.samir_muwal</h2></li>
