--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
      background-image:url(back.jpg);
      background-repeat: inherit;
         }
+        #responsive{
+            width: 100%;
+            height: auto;
+        }
     </style>
     
     <meta charset="UTF-8">
@@ -42,7 +46,7 @@
         </div>
     <div  class="card" style="width: 26.5rem;">
     <div class="card-body d-flex justify-content-center">
-        <img class="" src="samir.jpeg" style="height: 250px;">
+        <img id="responsive" src="samir.jpeg" style="height: 250px;">
     </div>
     
     </div>
